--- a/Styles/gamestore.css
+++ b/Styles/gamestore.css
@@ -192,7 +192,19 @@ header:hover {
     color: var(--light-color);
     font-size: 1.2rem;
 }
-
+.item-count {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--primary-color);
+    color: white;
+    border-radius: 50%;
+    width: 18px;
+    height: 18px;
+    font-size: 0.7rem;
+    margin-left: 3px;
+    box-shadow: 0 0 5px rgba(140, 82, 255, 0.5);
+}
 /* Main Title Styles with animated gradient */
 H1 {
     font-size: 2.5rem;
